pre-1.9.X
    Bug Fixes
      - Fix insertion of id and links when cursor immediately before a closing tag
      - Make sure bundled PySide6 can find QtWebEngine resources on Windows (Qt6)
    
    New Features
      - Add a Toggle Line Wrap Mode and its support added to CodeView via pop-up menu

    
Sigil-1.9.2
    Bug Fixes
      - fix loss of highlight on match when searching
      - fix incorrect search counts
      - fix incomplete replace all
      - fix useability issues in Saved Searches
      - fix handling or subcapture replacements when no search capture groups are provided
      - fix crash on Windows from too fast/repeated Find Net and Find Previous launched via keyboard shortcuts

Sigil-1.9.1
    Bug Fixes
     - Allow creation of a Windows 7 Legacy Installer to return Sigil to Windows 7 (for now)
     - Completely revamped Find and Replace (yet again) to return most of its
           earlier behaviour for finding next
     - Prevent Find and Replace Count from changing current location
     - Extend spellcheck suggestions to properly handle end of sentence vs abbreviations
     - Center Image Report File Sizes vertically within their row.
     - Go To Link Or Style will now properly skip leading comments on selectors in CSS stylesheets
     - ecmascript is considered a core media type for javascript files
     - make URLInterceptor robust when the Book pointer is NULL (has been cleared)


Sigil-1.9.0
    Bug Fixes
     - Update gumbo to follow WhatWG changes for closing br and p tags in foreign content
     - Fix Saved Search Controls code typo for Tabbed Html Files
     - Plug long existant memory leaks related to Saved Searches that stop after a match is found
     - More file position of 0 fixes and handle toInt() result failures from N/A in ValidationResults
     - Fix incorrect copied permissions with AddContentFileToFolder after QFile::copy
     - Fix broken page up / down by key sequence in Repo Log and Automate Log.